mudar index e acabei categorias

--- a/paginas/politica.html
+++ b/paginas/politica.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Politica</title>
+    <title>Política</title>
     <link rel="stylesheet" href="../styles/categorias.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,7 +38,7 @@
     <div class="rest-menu"></div>
 
     <div class="sub-title1">
-        <h1 class="sub-title">Arte</h1>
+        <h1 class="sub-title">Política</h1>
     </div>
 
     <div class="news-grid">
@@ -48,27 +48,27 @@
             <p>Para Nuno Melo, "o ciclo socialista terminou". "Este governo PS é o governo com a maioria absoluta mais absolutamente instável da democracia em Portugal", defendeu o presidente do CDS.</p>
         </div>
         <div class="news-item">
-            <img src="../img/arte/arte2.jpg" alt="Top Story 2" />
+            <img src="../img/politica/politica2.jpg" alt="Top Story 2" />
             <h2>Medina demite Alexandra Reis</h2>
             <p>Medina pediu à secretária de Estado do Tesouro que apresentasse demissão, o que foi "prontamente aceite".</p>
         </div>
         <div class="news-item">
-            <img src="../img/arte/arte3.jpg" alt="Top Story 3" />
+            <img src="../img/politica/politica3.jpg" alt="Top Story 3" />
             <h2>Chega envia queixa à Inspeção-Geral das Finanças sobre indemnizações pagas</h2>
             <p>André Ventura pediu a realização de uma investigação às saídas financeiras da TAP nos últimos anos.</p>
         </div>
         <div class="news-item">
-            <img src="../img/arte/arte4.jpg" alt="Top Story 1" />
+            <img src="../img/politica/politica4.jpg" alt="Top Story 1" />
             <h2>Marcelo Rebelo de Sousa: "Eu não decido o que se faz. Tenho de ir controlando o que quem decide faz"</h2>
             <p>O Presidente da República disse que a sua função é de "ir controlando o que quem decide faz", salientando que se pensassem exatamente o mesmo, "não valia a pena" haver Presidente e primeiro-ministro.</p>
         </div>
         <div class="news-item">
-            <img src="../img/arte/arte5.jpg" alt="Top Story 2" />
+            <img src="../img/politica/politica5.jpg" alt="Top Story 2" />
             <h2>"Está em causa o princípio do fim do SNS", diz Catarina Martins sobre fecho de maternidades</h2>
             <p>A líder do BE fala em "anúncio sorrateiro" e sem debate sobre os encerramentos das maternidades. Para Catarina Martins, "quem sempre se levantou pelo SNS não pode calar-se agora"...</p>
         </div>
         <div class="news-item">
-            <img src="../img/arte/arte6.jpg" alt="Top Story 3" />
+            <img src="../img/politica/politica6.jpg" alt="Top Story 3" />
             <h2>Costa salienta acordos em maioria absoluta e rejeita ansiedades</h2>
             <p>Primeiro-ministro recordou acordos alcançados na concertação social, na função pública, com autarquias e até com o PSD.</p>
         </div>
