--- a/paginas/registar.html
+++ b/paginas/registar.html
@@ -31,7 +31,7 @@
                <input type="submit" value="Registar">
             </div>
             <div class="field">
-               <input type="button" value="Voltar">
+               <input type="button" value="Voltar" id="Voltar">
             </div>
             <div class="signup-link">
               Já tem conta? <a href="./entrar.html">Entre já!</a>
