--- a/paginas/tendencias.html
+++ b/paginas/tendencias.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arte</title>
+    <title>Tendências</title>
     <link rel="stylesheet" href="../styles/categorias.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,12 +27,12 @@
     </header>
     <div class="sub-menu">
         <ul class="menu2">
-            <li><a href="paginas/tendencias.html">Tendências</a></li>
-            <li><a href="paginas/desporto.html">Desporto</a></li>
-            <li><a href="paginas/negocios.html">Negócios</a></li>
-            <li><a href="paginas/arte.html">Arte</a></li>
-            <li><a href="paginas/politica.html">Politica</a></li>
-            <li><a href="paginas/ciencia.html">Ciência</a></li>
+            <li><a href="tendencias.html">Tendências</a></li>
+            <li><a href="desporto.html">Desporto</a></li>
+            <li><a href="negocios.html">Negócios</a></li>
+            <li><a href="arte.html">Arte</a></li>
+            <li><a href="politica.html">Politica</a></li>
+            <li><a href="ciencia.html">Ciência</a></li>
         </ul>
     </div>
     <div class="rest-menu"></div>
