Correção do código em páginas de categorias

--- a/paginas/tendencias.html
+++ b/paginas/tendencias.html
@@ -29,7 +29,7 @@
         <ul class="menu2">
             <li><a href="tendencias.html">Tendências</a></li>
             <li><a href="desporto.html">Desporto</a></li>
-            <li><a href="negocios.html">Negócios</a></li>
+            <li><a href="internacional.html">Internacional</a></li>
             <li><a href="arte.html">Arte</a></li>
             <li><a href="politica.html">Politica</a></li>
             <li><a href="ciencia.html">Ciência</a></li>
@@ -38,12 +38,12 @@
     <div class="rest-menu"></div>
 
     <div class="sub-title1">
-        <h1 class="sub-title">Arte</h1>
+        <h1 class="sub-title">Tendências</h1>
     </div>
 
     <div class="news-grid">
         <div class="news-item">
-            <img src="https://dai.ly/x8g2a31" alt="Top Story 1" />
+            <img src="../img/arte/arte1.jpg" alt="Top Story 1" />
             <h2>"Acredito que estamos a viver uma era dourada da escrita, quer para teatro quer para televisão"</h2>
             <p>Ator, escritor, vencedor do prémio Pulitzer de Drama em 1992 com a peça Kentucky Cycle, e vencedor do Tony Award em 2014...</p>
         </div>
