Acabei as notícias na página index

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <ul class="menu2">
             <li><a href="paginas/tendencias.html">Tendências</a></li>
             <li><a href="paginas/desporto.html">Desporto</a></li>
-            <li><a href="paginas/mundo.html">Internacional</a></li>
+            <li><a href="paginas/internacional.html">Internacional</a></li>
             <li><a href="paginas/arte.html">Arte</a></li>
             <li><a href="paginas/politica.html">Politica</a></li>
             <li><a href="paginas/ciencia.html">Ciência</a></li>
@@ -147,28 +147,24 @@
             <p>Estudos recentes "de sequenciação do genoma de um grande número de tumores" demonstram "que estes têm milhares de alterações genéticas, as denominadas mutações".</p>
         </div>
         <div class="news-item">
-            <img src="img/carousel2.jpg" alt="Top Story 3" />
-            <h2>Top Story 3</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua.</p>
+            <img src="img/politica/politica4.jpg" alt="Top Story 1" />
+            <h2>Marcelo Rebelo de Sousa: "Eu não decido o que se faz. Tenho de ir controlando o que quem decide faz"</h2>
+            <p>O Presidente da República disse que a sua função é de "ir controlando o que quem decide faz", salientando que se pensassem exatamente o mesmo, "não valia a pena" haver Presidente e primeiro-ministro.</p>
         </div>
         <div class="news-item">
-            <img src="img/soccer.jpg" alt="Top Story 1" />
-            <h2>Top Story 1</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua.</p>
+            <img src="img/internacional/internacional2.jpg" alt="Top Story 2" />
+            <h2>Kiev garante ter repelido ataque noturno de drones russos</h2>
+            <p>Dos 70 mísseis de cruzeiro disparados pela Rússia na quinta-feira, 58 foram abatidos, mas quatro civis foram mortos e outros oito ficaram feridos, segundo as autoridades ucranianas</p>
         </div>
         <div class="news-item">
-            <img src="img/carousel1.jpg" alt="Top Story 2" />
-            <h2>Top Story 2</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua.</p>
+            <img src="img/arte/arte3.jpg" alt="Top Story 3" />
+            <h2>Femme nue Couchée, de Picasso, vendida por 64 milhões de euros</h2>
+            <p>Leilão contou com sete peças de Picasso, e obras de Monet, Cézanne e Gauguin, entre outros, atingindo mais de 388 milhões de euros.</p>
         </div>
         <div class="news-item">
-            <img src="img/carousel2.jpg" alt="Top Story 3" />
-            <h2>Top Story 3</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua.</p>
+            <img src="img/desporto/desporto6.jpg" alt="Top Story 3" />
+            <h2>Doncic é o segundo mais novo a chegar aos 50 triplos-duplos na NBA</h2>
+            <p>Apenas 10 jogadores na história conseguiram esta marca, com Doncic a ser apenas superado pelo lendário Oscar Robertson.</p>
         </div>
     </div>
 
