--- a/paginas/tendencias.html
+++ b/paginas/tendencias.html
@@ -43,35 +43,34 @@
 
     <div class="news-grid">
         <div class="news-item">
-            <img src="../img/arte/arte1.jpg" alt="Top Story 1" />
-            <h2>"Acredito que estamos a viver uma era dourada da escrita, quer para teatro quer para televisão"</h2>
-            <p>Ator, escritor, vencedor do prémio Pulitzer de Drama em 1992 com a peça Kentucky Cycle, e vencedor do Tony Award em 2014...</p>
+            <img src="../img/tendencias/tendencias1.jpg" alt="Top Story 1" />
+            <h2>É oficial: Ronaldo já assinou pelo Al-Nassr</h2>
+            <p>Está oficializada a contratação de Cristiano Ronaldo pelo clube Al-Nassr. Numa fotografia publicada nas redes sociais, o jogador português surge ao lado de Musli Al-Muammar, presidente do clube, com a sua nova camisola nº7.</p>
         </div>
         <div class="news-item">
-            <img src="../img/arte/arte2.jpg" alt="Top Story 2" />
-            <h2>Artista plástico João Murillo volta a expor sob o mote "Guardar o Verão para Sempre</h2>
-            <p>Lançamento da exposição na 39ª Concept Store, em Lisboa, marca o regresso do artista plástico</p>
+            <img src="../img/tendencias/tendencias2.jpg" alt="Top Story 2" />
+            <h2>Ex-kickboxer Andrew Tate detido na Roménia por suspeita de sequestro</h2>
+            <p>Ex-kickboxer britânico e o irmão suspeitos de integrar organização criminosa.</p>
         </div>
         <div class="news-item">
-            <img src="../img/arte/arte3.jpg" alt="Top Story 3" />
-            <h2>Femme nue Couchée, de Picasso, vendida por 64 milhões de euros</h2>
-            <p>Leilão contou com sete peças de Picasso, e obras de Monet, Cézanne e Gauguin, entre outros, atingindo mais de 388 milhões de euros.</p>
+            <img src="../img/tendencias/tendencias3.jpg" alt="Top Story 3" />
+            <h2>Medina demite Alexandra Reis</h2>
+            <p>Medina pediu à secretária de Estado do Tesouro que apresentasse demissão, o que foi "prontamente aceite".</p>
         </div>
         <div class="news-item">
-            <img src="../img/arte/arte4.jpg" alt="Top Story 1" />
-            <h2>Mais de 5 mil trabalhadores da cultura pediram apoio social</h2>
-            <p>5151 trabalhadores independentes solicitaram o apoio extraordinário para artistas, autores, técnicos e outros profissionais da Cultura...</p>
+            <img src="../img/tendencias/tendencias4.jpg" alt="Top Story 1" />
+            <h2>Marcelo exclui cenário de eleições antecipadas e quer Costa "a governar"</h2>
+            <p>"Não pode haver eleições todos os anos" e é "preferível que o Governo governe e governe cada vez melhor", disse Marcelo Rebelo de Sousa à partida de Lisboa para o Brasil, onde assistirá à posse do presidente brasileiro, Lula da Silva.</p>
         </div>
         <div class="news-item">
-            <img src="../img/arte/arte5.jpg" alt="Top Story 2" />
-            <h2>Pais de futuros bailarinos exigem melhores condições enquanto duram obras na escola</h2>
-            <p>Desesperados, alunos e encarregados de educação tentam salvar o que ainda resta do ensino
-                artístico. Querem ser transferidos para um único edifício.</p>
+            <img src="../img/tendencias/tendencias5.jpg" alt="Top Story 2" />
+            <h2>Bolsonaro sai do Brasil rumo aos EUA e falta à tomada de posse de Lula da Silva</h2>
+            <p>O ainda presidente Jair Bolsonaro deixou esta sexta-feira o Brasil, rumo aos Estados Unidos, onde irá celebrar a passagem de ano, devendo permanecer em solo americano até ao final do mês de janeiro.</p>
         </div>
         <div class="news-item">
-            <img src="../img/arte/arte6.jpg" alt="Top Story 3" />
-            <h2>Yanbei, o artista chinês que em Portugal já pinta o pós-covid</h2>
-            <p>Estava cansado da poluição em Pequim, sonhou com o Canadá para emigrar e hoje nem lhe passa pela cabeça deixar Portugal, onde vive com a mulher e os dois filhos há mais de cinco anos. Continua a pintar, agora de novo cheio de ideias...</p>
+            <img src="../img/tendencias/tendencias6.jpg" alt="Top Story 3" />
+            <h2>Qual é a ligação entre as tempestades de inverno e o aquecimento global?</h2>
+            <p>As fortes tempestades que têm atingido os Estados Unidos todos os invernos deixam os especialistas a investigar o porquê deste fenómeno e a sua relação com as alterações climáticas.</p>
         </div>
     </div>
     
