Alterei a parte ultimas noticias pagina index

--- a/index.html
+++ b/index.html
@@ -39,24 +39,20 @@
         <span id="btext">Ultimas Notícias</span>
         <marquee direction="left" onmouseover="this.stop()" onmouseout="this.start()">
             <a href="#" class="breaking_news">
-                <p class="bntime">14 Nov 2023</p>
-                Guerra entre Rússia e Ucrania acaba!
+                <p class="bntime">29 Dez 2022</p>
+                Andrew Tate preso
             </a>
             <a href="#" class="breaking_news">
-                <p class="bntime">14 Nov 2023</p>
-                Cristiano Ronaldo deixa Manchester United
+                <p class="bntime">30 Dez 2022</p>
+                Cristiano Ronaldo assina pelo Al Nasser
             </a>
             <a href="#" class="breaking_news">
-                <p class="bntime">14 Nov 2023</p>
-                Desastre na Tailândia após Tsunami
+                <p class="bntime">30 Dez 2022</p>
+                Porto cancela fogo e festejos de fim de ano
             </a>
             <a href="#" class="breaking_news">
-                <p class="bntime">14 Nov 2023</p>
-                Assaulto nas ruas de Londres
-            </a>
-            <a href="#" class="breaking_news">
-                <p class="bntime">14 Nov 2023</p>
-                Mundo vai acabar em 2023
+                <p class="bntime">30 Dez 2022</p>
+                Preços de combustível sobem no começo do ano
             </a>
         </marquee>
     </div>
