--- a/paginas/registar.html
+++ b/paginas/registar.html
@@ -10,21 +10,21 @@
          <div class="title">
             Criar Conta
          </div>
-         <form action="#">
+         <form action="#" id="form1">
             <div class="field">
-               <input type="text" required>
+               <input type="text" id="name" required>
                <label>Nome de Utilizador</label>
             </div>
             <div class="field">
-                <input type="email" required>
+                <input type="email" id="email" required>
                 <label>Email</label>
              </div>
             <div class="field">
-               <input type="password" required>
+               <input type="password" id="password" required>
                <label>Palavra-Passe</label>
             </div>
             <div class="field">
-                <input type="password" required>
+                <input type="password" id="cpassword" required>
                 <label> Confirmar Palavra-Passe</label>
              </div>
             <div class="field">
@@ -38,5 +38,6 @@
             </div>
          </form>
       </div>
+      <script src="../scripts/user.js"></script>
    </body>
 </html>
