--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         </ul>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="./scripts/script.js"></script>
 </body>
 
 </html>
