Botão voltar na pagina entrar

--- a/paginas/entrar.html
+++ b/paginas/entrar.html
@@ -23,7 +23,7 @@
                <input type="submit" value="Entrar">
             </div>
             <div class="field">
-               <input type="button" value="Voltar">
+               <a href="javascript:history.back()"><input type="button" value="Voltar"></a>
             </div>
             <div class="signup-link">
                Não tem conta? <a href="./registar.html">Crie uma!</a>
