--- a/paginas/desporto.html
+++ b/paginas/desporto.html
@@ -19,9 +19,9 @@
 
         <nav>
             <ul class="menu">
-                <li><a href="sobre.html">About</a></li>
-                <li><a href="servicos.html">Services</a></li>
-                <li><a href="entrar.html">Sign up</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
+                <li><a href="servicos.html">Serviços</a></li>
+                <li><a href="entrar.html">Entrar</a></li>
             </ul>
         </nav>
     </header>
