Pag individual e margin popularnews

--- a/paginas/individual.html
+++ b/paginas/individual.html
@@ -12,7 +12,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
     
 </head>
-
 <body>
     <header class="main_header">
         <h1><span class="logo"><a href="../index.html"><img src="../img/logo/logo.svg" alt=""></a></span></h1>
@@ -35,14 +34,59 @@
             <li><a href="ciencia.html">Ciência</a></li>
         </ul>
     </div>
-    <div class="rest-menu"></div>
 
-    <div class="sub-title1">
-        <h1 class="sub-title"></h1>
+    <div class="individual_new">
+        <div class="individual_imagem">
+            <img src="../img/arte/arte1.jpg" alt="">
+        </div>
+        <div class="titulo_individual">
+            <h1>fafdsafesdsfefsdfedfe</h1>
+        </div>
+        <div class="texto_individual">
+            <p>We designed and engineered our Full Self-Driving (FSD) computer from the ground up to rapidly process neural networks — the foundation for how we train and develop Autopilot. While our vehicles require active driver supervision and are not fully autonomous today, the FSD computer is capable of delivering intelligent performance and control to enable a new level of safety and autonomy, without impacting cost or range. We designed and engineered our Full Self-Driving (FSD) computer from the ground up to rapidly process neural networks — the foundation for how we train and develop Autopilot. While our vehicles require active driver supervision and are not fully autonomous today, the FSD computer is capable of delivering intelligent performance and control to enable a new level of safety and autonomy, without impacting cost or range.</p>
+        </div>
     </div>
 
-    <div class="news"></div>
+    <div class="sub-title1">
+        <h1 class="sub-title">Mais Notícias</h1>
+    </div>
+
+    <div class="news-grid">
+        <div class="news-item">
+            <img src="../img/desporto/desporto5.jpg" alt="Top Story 1" />
+            <h2>Salt Bae, o homem do bife de ouro que entrou no relvado na final do Mundlal</h2>
+            <p>Chef turco conseguiu entrar, de forma inexplicável, no relvado, após a final do Mundial de futebol entre Argentina e França.</p>
+        </div>
+        <div class="news-item">
+            <img src="../img/ciencia/ciencia6.jpg" alt="Top Story 2" />
+            <h2>Cientistas identificam mutação genética associada a linfomas e cancro do pulmão</h2>
+            <p>Estudos recentes "de sequenciação do genoma de um grande número de tumores" demonstram "que estes têm milhares de alterações genéticas, as denominadas mutações".</p>
+        </div>
+        <div class="news-item">
+            <img src="../img/politica/politica4.jpg" alt="Top Story 1" />
+            <h2>Marcelo Rebelo de Sousa: "Eu não decido o que se faz. Tenho de ir controlando o que quem decide faz"</h2>
+            <p>O Presidente da República disse que a sua função é de "ir controlando o que quem decide faz", salientando que se pensassem exatamente o mesmo, "não valia a pena" haver Presidente e primeiro-ministro.</p>
+        </div>
+        <div class="news-item">
+            <img src="../img/internacional/internacional2.jpg" alt="Top Story 2" />
+            <h2>Kiev garante ter repelido ataque noturno de drones russos</h2>
+            <p>Dos 70 mísseis de cruzeiro disparados pela Rússia na quinta-feira, 58 foram abatidos, mas quatro civis foram mortos e outros oito ficaram feridos, segundo as autoridades ucranianas</p>
+        </div>
+        <div class="news-item">
+            <img src="../img/arte/arte3.jpg" alt="Top Story 3" />
+            <h2>Femme nue Couchée, de Picasso, vendida por 64 milhões de euros</h2>
+            <p>Leilão contou com sete peças de Picasso, e obras de Monet, Cézanne e Gauguin, entre outros, atingindo mais de 388 milhões de euros.</p>
+        </div>
+        <div class="news-item">
+            <img src="../img/desporto/desporto6.jpg" alt="Top Story 3" />
+            <h2>Doncic é o segundo mais novo a chegar aos 50 triplos-duplos na NBA</h2>
+            <p>Apenas 10 jogadores na história conseguiram esta marca, com Doncic a ser apenas superado pelo lendário Oscar Robertson.</p>
+        </div>
+    </div>
+
+
     
+
     <footer>
         <p>Copyright 2022 My News Website</p>
         <ul>
