--- a/paginas/individual.html
+++ b/paginas/individual.html
@@ -90,9 +90,9 @@
     <footer>
         <p>Copyright 2022 My News Website</p>
         <ul>
-          <li><a href="terms-of-use.html">Terms of Use</a></li>
-          <li><a href="privacy-policy.html">Privacy Policy</a></li>
-          <li><a href="contact-us.html">Contact Us</a></li>
+            <li><a href="terms-of-use.html">Termos de uso</a></li>
+            <li><a href="privacy-policy.html">Política de Privacidade</a></li>
+            <li><a href="contact-us.html">Contacta nos</a></li>
         </ul>
     </footer>
 
