--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
 
     <footer>
-        <p>Copyright 2022 My News Website</p>
+        <p>Copyright 2022 Meu site de notícias</p>
         <ul>
           <li><a href="terms-of-use.html">Termos de uso</a></li>
           <li><a href="privacy-policy.html">Política de Privacidade</a></li>
