varias cenas muito trabalho arduo do Joao

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <h2>Últimas</h2>
                 <section class="news">
                     <div class="news_container">
-                        <img src="img/ciencia/ciencia2.jpg">
+                        <img src="img/ciencia/ciencia2.jpg" onclick="redirecionar()">
                         <p class="latest_news_text">ChatGPT. O prodígio da Inteligência Artificial</p>
                     </div>
                 </section>
