--- a/paginas/individual.html
+++ b/paginas/individual.html
@@ -34,6 +34,7 @@
             <li><a href="ciencia.html">Ciência</a></li>
         </ul>
     </div>
+    <div class="rest-menu"></div>
 
     <div class="individual_new">
         <div class="individual_imagem">
