adicionar metade das noticias individuais

--- a/paginas/arte.html
+++ b/paginas/arte.html
@@ -43,33 +43,33 @@
 
     <div class="news-grid">
         <div class="news-item">
-            <img src="../img/arte/arte1.jpg" alt="Top Story 1" />
+            <a href="./individual.html?id=1"><img src="../img/arte/arte1.jpg" alt="Top Story 1" /></a>
             <h2>"Acredito que estamos a viver uma era dourada da escrita, quer para teatro quer para televisão"</h2>
             <p>Ator, escritor, vencedor do prémio Pulitzer de Drama em 1992 com a peça Kentucky Cycle, e vencedor do Tony Award em 2014...</p>
         </div>
         <div class="news-item">
-            <img src="../img/arte/arte2.jpg" alt="Top Story 2" />
+            <a href="./individual.html?id=2"><img src="../img/arte/arte2.jpg" alt="Top Story 2" /></a>
             <h2>Artista plástico João Murillo volta a expor sob o mote "Guardar o Verão para Sempre</h2>
             <p>Lançamento da exposição na 39ª Concept Store, em Lisboa, marca o regresso do artista plástico</p>
         </div>
         <div class="news-item">
-            <img src="../img/arte/arte3.jpg" alt="Top Story 3" />
+            <a href="./individual.html?id=3"><img src="../img/arte/arte3.jpg" alt="Top Story 3" /></a>
             <h2>Femme nue Couchée, de Picasso, vendida por 64 milhões de euros</h2>
             <p>Leilão contou com sete peças de Picasso, e obras de Monet, Cézanne e Gauguin, entre outros, atingindo mais de 388 milhões de euros.</p>
         </div>
         <div class="news-item">
-            <img src="../img/arte/arte4.jpg" alt="Top Story 1" />
+            <a href="./individual.html?id=4"><img src="../img/arte/arte4.jpg" alt="Top Story 1" /></a>
             <h2>Mais de 5 mil trabalhadores da cultura pediram apoio social</h2>
             <p>5151 trabalhadores independentes solicitaram o apoio extraordinário para artistas, autores, técnicos e outros profissionais da Cultura...</p>
         </div>
         <div class="news-item">
-            <img src="../img/arte/arte5.jpg" alt="Top Story 2" />
+            <a href="./individual.html?id=5"><img src="../img/arte/arte5.jpg" alt="Top Story 2" /></a>
             <h2>Pais de futuros bailarinos exigem melhores condições enquanto duram obras na escola</h2>
             <p>Desesperados, alunos e encarregados de educação tentam salvar o que ainda resta do ensino
                 artístico. Querem ser transferidos para um único edifício.</p>
         </div>
         <div class="news-item">
-            <img src="../img/arte/arte6.jpg" alt="Top Story 3" />
+            <a href="./individual.html?id=6"><img src="../img/arte/arte6.jpg" alt="Top Story 3" /></a>
             <h2>Yanbei, o artista chinês que em Portugal já pinta o pós-covid</h2>
             <p>Estava cansado da poluição em Pequim, sonhou com o Canadá para emigrar e hoje nem lhe passa pela cabeça deixar Portugal, onde vive com a mulher e os dois filhos há mais de cinco anos. Continua a pintar, agora de novo cheio de ideias...</p>
         </div>
@@ -84,7 +84,7 @@
         </ul>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="../scripts/individual.js"></script>
 
     
 </body>
