--- a/paginas/ciencia.html
+++ b/paginas/ciencia.html
@@ -43,32 +43,33 @@
 
     <div class="news-grid">
         <div class="news-item">
-            <img src="../img/ciencia/ciencia1.jpg" alt="Top Story 1" />
+            <a href="individual.html?id=7"><img src="../img/ciencia/ciencia1.jpg" alt="Top Story 1" /></a>
             <h2>Cientista da Universidade de Coimbra descobre fóssil de nova espécie de conífera</h2>
             <p>O estudo tem vindo a ser desenvolvido em parceria com diversas instituições internacionais, nomeadamente o Swedish Museum of Natural History de Estocolmo...</p>
         </div>
         <div class="news-item">
-            <img src="../img/ciencia/ciencia2.jpg" alt="Top Story 2" />
+            <a href="individual.html?id=8"><img src="../img/ciencia/ciencia2.jpg" alt="Top Story 2" /></a>
             <h2>ChatGPT. O prodígio da Inteligência Artificial é "empolgante", mas é preciso ter cuidado com "efeitos secundários"</h2>
             <p>Modelo de IA ultrapassou um milhão de utilizadores em poucos dias e responde a todo o tipo de perguntas em português correto...</p>
         </div>
         <div class="news-item">
-            <img src="../img/ciencia/ciencia3.jpg" alt="Top Story 3" />
+            <a href="individual.html?id=9"><img src="../img/ciencia/ciencia3.jpg" alt="Top Story 3" /></a>
+            </a>
             <h2>Raios-X, a prenda de Natal que assombrou o final do século XIX</h2>
             <p>Nas vésperas do Natal de 1895, o físico alemão Wilhelm Conrad Röntgen procurava uma explicação para uma descoberta filha do acaso...</p>
         </div>
         <div class="news-item">
-            <img src="../img/ciencia/ciencia4.jpg" alt="Top Story 1" />
+            <a href="individual.html?id=10"><img src="../img/ciencia/ciencia4.jpg" alt="Top Story 1" /></a>
             <h2>"Colocar humanos na Lua dentro de dois anos parece-me realista"</h2>
             <p>No mês do lançamento de teste do programa Artemis, ex-astronauta da NASA Mike Massimino falou com o DN sobre o futuro do setor e deixa conselhos para quem quiser seguir a carreira.</p>
         </div>
         <div class="news-item">
-            <img src="../img/ciencia/ciencia5.jpg" alt="Top Story 2" />
+            <a href="individual.html?id=11"><img src="../img/ciencia/ciencia5.jpg" alt="Top Story 2" /></a>
             <h2>Nova terapia poderá favorecer tratamento de epilepsia e outras doenças</h2>
             <p>Cientistas testam novo tratamento mais eficaz que poderá reduzir as convulsões espontâneas em casos de epilepsia.</p>
         </div>
         <div class="news-item">
-            <img src="../img/ciencia/ciencia6.jpg" alt="Top Story 3" />
+            <a href="individual.html?id=12"><img src="../img/ciencia/ciencia6.jpg" alt="Top Story 3" /></a>
             <h2>Cientistas identificam mutação genética associada a linfomas e cancro do pulmão</h2>
             <p>Estudos recentes "de sequenciação do genoma de um grande número de tumores" demonstram "que estes têm milhares de alterações genéticas, as denominadas mutações".</p>
         </div>
