--- a/paginas/desporto.html
+++ b/paginas/desporto.html
@@ -43,32 +43,32 @@
 
     <div class="news-grid">
         <div class="news-item">
-            <img src="../img/desporto/desporto1.jpg" alt="Top Story 1" />
+            <a href="./individual.html?id=13"><img src="../img/desporto/desporto1.jpg"  alt="Top Story 1" /></a>
             <h2>Em dia de outro Portugal-França, recorde aqui o golo de Éder em slow motion</h2>
             <p>O histórico minuto 109 do prolongamento da final com a França valeu a Portugal o primeiro grande título a nível de seleções. Hoje às 20.00 as duas seleções voltam a encontrar-se num Europeu de futebol.</p>
         </div>
         <div class="news-item">
-            <img src="../img/desporto/desporto2.jpg" alt="Top Story 2" />
+            <a href="./individual.html?id=14"><img src="../img/desporto/desporto2.jpg" alt="Top Story 2" /></a>
             <h2>Al-Nassr espera oficializar Ronaldo a 1 de janeiro</h2>
             <p>Os responsáveis pelo clube saudita aguardam a chegada de CR7 e já tentam convencer o espanhol Sergio Ramos a seguir-lhe os passos</p>
         </div>
         <div class="news-item">
-            <img src="../img/desporto/desporto3.jpg" alt="Top Story 3" />
+            <a href="./individual.html?id=15"><img src="../img/desporto/desporto3.jpg" alt="Top Story 3" /></a>
             <h2>Conceição relativiza iminente recorde de vitórias no FC Porto</h2>
             <p>Sérgio Conceição poderá recorde de 215 vitórias de José Maria Pedroto no comando dos dragões na receção ao Arouca.</p>
         </div>
         <div class="news-item">
-            <img src="../img/desporto/desporto4.jpg" alt="Top Story 1" />
+            <a href="./individual.html?id=16"><img src="../img/desporto/desporto4.jpg" alt="Top Story 1" /></a>
             <h2>Liverpool contrata avançado neerlandês Cody Gakpo ao PSV Eindhoven</h2>
             <p>Contratação do atacante da seleção dos Países Baixos ajudará a suprir as baixas por lesão do colombiano Luis Díaz e do português Diogo Jota.</p>
         </div>
         <div class="news-item">
-            <img src="../img/desporto/desporto5.jpg" alt="Top Story 2" />
+            <a href="./individual.html?id=17"><img src="../img/desporto/desporto5.jpg" alt="Top Story 2" /></a>
             <h2>Salt Bae, o homem do bife de ouro que entrou no relvado na final do Mundlal</h2>
             <p>Chef turco conseguiu entrar, de forma inexplicável, no relvado, após a final do Mundial de futebol entre Argentina e França.</p>
         </div>
         <div class="news-item">
-            <img src="../img/desporto/desporto6.jpg" alt="Top Story 3" />
+            <a href="./individual.html?id=18"><img src="../img/desporto/desporto6.jpg" alt="Top Story 3" /></a>
             <h2>Doncic é o segundo mais novo a chegar aos 50 triplos-duplos na NBA</h2>
             <p>Apenas 10 jogadores na história conseguiram esta marca, com Doncic a ser apenas superado pelo lendário Oscar Robertson.</p>
         </div>
