--- a/paginas/individual.html
+++ b/paginas/individual.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arte</title>
-    <link rel="stylesheet" href="../styles/categorias.css">
+    <link rel="stylesheet" href="../styles/individual.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
@@ -37,14 +37,14 @@
     <div class="rest-menu"></div>
 
     <div class="individual_new">
-        <div class="individual_imagem">
-            <img src="../img/arte/arte1.jpg" alt="">
+        <div>
+            <img id="individual_imagem" src="" alt="">
         </div>
-        <div class="titulo_individual">
-            <h1>fafdsafesdsfefsdfedfe</h1>
+        <div>
+            <h1 id="titulo_individual"></h1>
         </div>
-        <div class="texto_individual">
-            <p>We designed and engineered our Full Self-Driving (FSD) computer from the ground up to rapidly process neural networks — the foundation for how we train and develop Autopilot. While our vehicles require active driver supervision and are not fully autonomous today, the FSD computer is capable of delivering intelligent performance and control to enable a new level of safety and autonomy, without impacting cost or range. We designed and engineered our Full Self-Driving (FSD) computer from the ground up to rapidly process neural networks — the foundation for how we train and develop Autopilot. While our vehicles require active driver supervision and are not fully autonomous today, the FSD computer is capable of delivering intelligent performance and control to enable a new level of safety and autonomy, without impacting cost or range.</p>
+        <div >
+            <p id="texto_individual"></p>
         </div>
     </div>
 
@@ -97,7 +97,7 @@
         </ul>
     </footer>
 
-    <script src="../individual.js"></script>
-
+    
+    <script src="../scripts/individual.js"></script>
     
 </body>
