--- a/paginas/internacional.html
+++ b/paginas/internacional.html
@@ -43,32 +43,32 @@
 
     <div class="news-grid">
         <div class="news-item">
-            <img src="../img/internacional/internacional1.jpg" alt="Top Story 1" />
+            <a href="./individual.html?id=19"><img src="../img/internacional/internacional1.jpg" alt="Top Story 1" /></a>
             <h2>Declarações fiscais de Trump divulgadas pelo Congresso dos EUA</h2>
             <p>Donald Trump recusou divulgar as suas declarações fiscais quando concorreu à presidência dos Estados Unidos...</p>
         </div>
         <div class="news-item">
-            <img src="../img/internacional/internacional2.jpg" alt="Top Story 2" />
+            <a href="./individual.html?id=20"><img src="../img/internacional/internacional2.jpg" alt="Top Story 2" /></a>
             <h2>Kiev garante ter repelido ataque noturno de drones russos</h2>
             <p>Dos 70 mísseis de cruzeiro disparados pela Rússia na quinta-feira, 58 foram abatidos, mas quatro civis foram mortos e outros oito ficaram feridos, segundo as autoridades ucranianas</p>
         </div>
         <div class="news-item">
-            <img src="../img/internacional/internacional3.jpg" alt="Top Story 3" />
+            <a href="./individual.html?id=21"><img src="../img/internacional/internacional3.jpg" alt="Top Story 3" /></a>
             <h2>Dirigente deposta Aung San Suu Kyi condenada a mais sete anos de prisão</h2>
             <p>A Nobel da Paz​​​​​​, de 77 anos, deverá passar um total de 33 anos na cadeia, no final de 18 meses de um processo, iniciado em junho de 2021. Já se encontra a cumprir uma pena de 26 anos na prisão de Naypyidaw.</p>
         </div>
         <div class="news-item">
-            <img src="../img/internacional/internacional4.jpg" alt="Top Story 1" />
+            <a href="./individual.html?id=22"><img src="../img/internacional/internacional4.jpg" alt="Top Story 1" /></a>
             <h2>Morreu a designer de moda e ativista Vivienne Westwood</h2>
             <p>A 'rainha da moda punk' tinha 81 anos e morreu em Inglaterra.</p>
         </div>
         <div class="news-item">
-            <img src="../img/internacional/internacional5.jpg"" alt="Top Story 2" />
+            <a href="./individual.html?id=23"><img src="../img/internacional/internacional5.jpg"" alt="Top Story 2" /></a>
             <h2>Congresso, orçamento e as ruas são principais desafios para Lula</h2>
             <p>Novo presidente terá de ser hábil na política, com legislativo hostil, e na economia, com Estado combalido, além de mostrar disposição para a hercúlea tarefa de unir um Brasil dividido.</p>
         </div>
         <div class="news-item">
-            <img src="../img/internacional/internacional6.jpg" alt="Top Story 3" />
+            <a href="./individual.html?id=24"><img src="../img/internacional/internacional6.jpg" alt="Top Story 3" /></a>
             <h2>EUA passam a exigir teste à covid-19 para quem chega da China</h2>
             <p>A medida entra em vigor em 5 de janeiro, sendo que "todos os passageiros aéreos com 2 ou mais anos oriundos da China serão obrigados a fazer um teste no máximo dois dias antes da partida"...</p>
         </div>
