--- a/paginas/tendencias.html
+++ b/paginas/tendencias.html
@@ -43,32 +43,32 @@
 
     <div class="news-grid">
         <div class="news-item">
-            <img src="../img/tendencias/tendencias1.jpg" alt="Top Story 1" />
+            <a href="./individual.html?id=31"><img src="../img/tendencias/tendencias1.jpg" alt="Top Story 1" /></a>
             <h2>É oficial: Ronaldo já assinou pelo Al-Nassr</h2>
             <p>Está oficializada a contratação de Cristiano Ronaldo pelo clube Al-Nassr. Numa fotografia publicada nas redes sociais, o jogador português surge ao lado de Musli Al-Muammar, presidente do clube, com a sua nova camisola nº7.</p>
         </div>
         <div class="news-item">
-            <img src="../img/tendencias/tendencias2.jpg" alt="Top Story 2" />
+            <a href="./individual.html?id=32"><img src="../img/tendencias/tendencias2.jpg" alt="Top Story 2" /></a>
             <h2>Ex-kickboxer Andrew Tate detido na Roménia por suspeita de sequestro</h2>
             <p>Ex-kickboxer britânico e o irmão suspeitos de integrar organização criminosa.</p>
         </div>
         <div class="news-item">
-            <img src="../img/tendencias/tendencias3.jpg" alt="Top Story 3" />
+            <a href="./individual.html?id=33"><img src="../img/tendencias/tendencias3.jpg" alt="Top Story 3" /></a>
             <h2>Medina demite Alexandra Reis</h2>
             <p>Medina pediu à secretária de Estado do Tesouro que apresentasse demissão, o que foi "prontamente aceite".</p>
         </div>
         <div class="news-item">
-            <img src="../img/tendencias/tendencias4.jpg" alt="Top Story 1" />
+            <a href="./individual.html?id=34"><img src="../img/tendencias/tendencias4.jpg" alt="Top Story 1" /></a>
             <h2>Marcelo exclui cenário de eleições antecipadas e quer Costa "a governar"</h2>
             <p>"Não pode haver eleições todos os anos" e é "preferível que o Governo governe e governe cada vez melhor", disse Marcelo Rebelo de Sousa à partida de Lisboa para o Brasil, onde assistirá à posse do presidente brasileiro, Lula da Silva.</p>
         </div>
         <div class="news-item">
-            <img src="../img/tendencias/tendencias5.jpg" alt="Top Story 2" />
+            <a href="./individual.html?id=35"><img src="../img/tendencias/tendencias5.jpg" alt="Top Story 2" /></a>
             <h2>Bolsonaro sai do Brasil rumo aos EUA e falta à tomada de posse de Lula da Silva</h2>
             <p>O ainda presidente Jair Bolsonaro deixou esta sexta-feira o Brasil, rumo aos Estados Unidos, onde irá celebrar a passagem de ano, devendo permanecer em solo americano até ao final do mês de janeiro.</p>
         </div>
         <div class="news-item">
-            <img src="../img/tendencias/tendencias6.jpg" alt="Top Story 3" />
+            <a href="./individual.html?id=36"><img src="../img/tendencias/tendencias6.jpg" alt="Top Story 3" /></a>
             <h2>Qual é a ligação entre as tempestades de inverno e o aquecimento global?</h2>
             <p>As fortes tempestades que têm atingido os Estados Unidos todos os invernos deixam os especialistas a investigar o porquê deste fenómeno e a sua relação com as alterações climáticas.</p>
         </div>
