--- a/paginas/politica.html
+++ b/paginas/politica.html
@@ -43,32 +43,32 @@
 
     <div class="news-grid">
         <div class="news-item">
-            <img src="../img/politica/politica1.jpg" alt="Top Story 1" />
+            <a href="./individual.html?id=25"><img src="../img/politica/politica1.jpg" alt="Top Story 1" /></a>
             <h2>Líder do CDS apela a Marcelo que dissolva parlamento e convoque eleições</h2>
             <p>Para Nuno Melo, "o ciclo socialista terminou". "Este governo PS é o governo com a maioria absoluta mais absolutamente instável da democracia em Portugal", defendeu o presidente do CDS.</p>
         </div>
         <div class="news-item">
-            <img src="../img/politica/politica2.jpg" alt="Top Story 2" />
+            <a href="./individual.html?id=26"><img src="../img/politica/politica2.jpg" alt="Top Story 2" /></a>
             <h2>Medina demite Alexandra Reis</h2>
             <p>Medina pediu à secretária de Estado do Tesouro que apresentasse demissão, o que foi "prontamente aceite".</p>
         </div>
         <div class="news-item">
-            <img src="../img/politica/politica3.jpg" alt="Top Story 3" />
+            <a href="./individual.html?id=27"><img src="../img/politica/politica3.jpg" alt="Top Story 3" /></a>
             <h2>Chega envia queixa à Inspeção-Geral das Finanças sobre indemnizações pagas</h2>
             <p>André Ventura pediu a realização de uma investigação às saídas financeiras da TAP nos últimos anos.</p>
         </div>
         <div class="news-item">
-            <img src="../img/politica/politica4.jpg" alt="Top Story 1" />
+            <a href="./individual.html?id=28"><img src="../img/politica/politica4.jpg" alt="Top Story 1" /></a>
             <h2>Marcelo Rebelo de Sousa: "Eu não decido o que se faz. Tenho de ir controlando o que quem decide faz"</h2>
             <p>O Presidente da República disse que a sua função é de "ir controlando o que quem decide faz", salientando que se pensassem exatamente o mesmo, "não valia a pena" haver Presidente e primeiro-ministro.</p>
         </div>
         <div class="news-item">
-            <img src="../img/politica/politica5.jpg" alt="Top Story 2" />
+            <a href="./individual.html?id=29"><img src="../img/politica/politica5.jpg" alt="Top Story 2" /></a>
             <h2>"Está em causa o princípio do fim do SNS", diz Catarina Martins sobre fecho de maternidades</h2>
             <p>A líder do BE fala em "anúncio sorrateiro" e sem debate sobre os encerramentos das maternidades. Para Catarina Martins, "quem sempre se levantou pelo SNS não pode calar-se agora"...</p>
         </div>
         <div class="news-item">
-            <img src="../img/politica/politica6.jpg" alt="Top Story 3" />
+            <a href="./individual.html?id=30"><img src="../img/politica/politica6.jpg" alt="Top Story 3" /></a>
             <h2>Costa salienta acordos em maioria absoluta e rejeita ansiedades</h2>
             <p>Primeiro-ministro recordou acordos alcançados na concertação social, na função pública, com autarquias e até com o PSD.</p>
         </div>
